fix: avoid jumpy opening of template header

--- a/app/styles/components/template-editor.scss
+++ b/app/styles/components/template-editor.scss
@@ -8,17 +8,16 @@
         padding: 0px 10px;
         border-radius: 4px 4px 0px 0px;
         border: solid 1px $gray-400;
-        border-bottom: none;
     }
 
     &.hide {
         .header {
             border-radius: 4px;
-            border: solid 1px $gray-400;
         }
     }
 
     textarea {
+        border-top: none;
         border-radius: 0px 0px 4px 4px;
     }
 
